--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,11 @@
   justify-content: center;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  border: 5px solid red;
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+}
+
+.header {
+  text-align: center;
+  height: 5vh;
 }
